# ScreenLink

./: .eslintrc.json  .gitignore  .prettierignore  .prettierrc  AUTO_UPDATE_TECHNICAL.md  AUTO_UPDATE_USER_GUIDE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_READY.md  GETTING_STARTED.md  GUI_README.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PORTABILITY_COMPLETE.md  PORTABILITY_GUIDE.md  PORTABLE_BUILD.md  PUBLICACAO_V1.0.0.md  QUICKSTART.md  README.md  RELEASE_NOTES.md  TESTING.md  TEST_REPORT.md  TURBO_SUMMARY.md  USAGE.md  USER_GUIDE.md  WEB_LINKS.md  build-portable.ps1  build-portable.sh  build.rs  build.sh  create_releases.sh  deploy-v1.0.0.sh  jest.config.js  jest.setup.ts  kvm-pro.toml  make-portable.ps1  make-portable.sh  (+10 more)
.github/: dependabot.yml
.github/workflows/: build-portable.yml  build-test.yml  ci.yml  code-quality.yml  dependabot-auto-merge.yml  release.yml
.husky/: commit-msg  pre-commit  prepare.sh
backend/: .env.example  package.json  tsconfig.json
backend/src/: server.ts
backend/src/__tests__/: server.test.ts
benchmarks/: run-benchmark.js
core/: Cargo.toml  manifest.xml
core/.cargo/: config.toml
core/src/: client.rs  lib.rs  main.rs  p2p.rs  p2p_old.rs  transport.rs  ui.rs  ui_module.rs
core/src/clipboard/: mod.rs
core/src/config/: mod.rs
core/src/input/: capture.rs  inject.rs  keymap.rs  mod.rs
core/src/network/: discovery.rs  mod.rs  protocol_handler.rs  tcp.rs  udp.rs
core/src/plugins/: mod.rs
core/src/screen/: layout.rs  mod.rs
core/src/security/: mod.rs  tls.rs
core/src/utils/: mod.rs  update_checker.rs
dist-portable/ScreenLink-1.0.0-linux-portable/: README.txt  run.sh
dist-template/: auto-update.bat  run-server-with-update.bat  run-server-with-update.sh
docs/: API.md  ARCHITECTURE.md  PERFORMANCE.md  STUDY_GUIDE.md
examples/: README.md  browser-client.html  client.js  client.py
frontend/: Cargo.toml  index.html  package.json  tauri.conf.json  tsconfig.json  vite.config.ts
frontend/icons/: icon.icns
frontend/src/: App.css  App.tsx  index.css
frontend/src-tauri/: lib.rs  main.rs
frontend/src/__tests__/: components.test.tsx
scripts/: appimage-build.sh  auto-update.sh  build.sh  get-version.sh  package.sh  portable-build.sh  release-build.sh  setup.sh  windows-build.sh  windows-installer.sh
shared/: constants.rs  protocol.rs
