[package]
name = "kvm-pro"
version = "1.0.4"
edition = "2021"
description = "A high-performance KVM software superior to Input Leap and Barrier"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
ratatui = "0.26"
crossterm = "0.27"
local-ip-address = "0.6"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser", "winbase", "winerror"] }

[[bin]]
name = "kvm-pro"
path = "core/src/p2p.rs"

[[bin]]
name = "kvm-pro-server"
path = "core/src/main.rs"

[[bin]]
name = "kvm-pro-client"
path = "core/src/client.rs"

[[bin]]
name = "kvm-pro-ui"
path = "core/src/ui.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
