[package]
name = "kvm-pro"
version = "1.0.9"
edition = "2021"
description = "A high-performance KVM software superior to Input Leap and Barrier - Single binary, no firewall issues"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
local-ip-address = "0.6"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser", "winbase", "winerror"] }

[build-dependencies]
winres = "0.1"

[[bin]]
name = "kvm-pro"
path = "core/src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
