[package]
name = "kvm-pro"
version = "0.1.0"
edition = "2021"
description = "A high-performance KVM software superior to Input Leap and Barrier"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Network
tokio-rustls = "0.24"
rustls = { version = "0.21", features = ["std"] }
rustls-pemfile = "1.0"

# Platform-specific input
[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.12"
uinput = "0.1"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser", "winbase", "winerror"] }
windows = { version = "0.48", features = ["Win32_UI_Input_KeyboardAndMouse", "Win32_Foundation", "Win32_System_Memory"] }

# Logging
log = "0.4"
env_logger = "0.10"

# Configuration
toml = "0.8"
config = "0.13"

# Utils
lazy_static = "1.4"
thiserror = "1.0"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }

[[bin]]
name = "kvm-pro-server"
path = "src/main.rs"

[[bin]]
name = "kvm-pro-client"
path = "src/client.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

# Portable/musl build profile
[profile.portable]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true