[package]
name = "screenlink-core"
version = "1.0.0"
edition = "2021"
publish = false

[[bin]]
name = "screenlink"
path = "src-tauri/main.rs"

[lib]
name = "screenlink_lib"
path = "src-tauri/lib.rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = [] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
